enhance APIs
